lab-3-opt/04-rewrite/cafe-ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
  annotations:
    nginx.org/rewrites: "serviceName=coffee-svc rewrite=/beans/"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - cafe.f5demo.id
    secretName: cafe-secret
  rules:
  - host: cafe.f5demo.id
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
